--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
       "ts-node-dev": "^1.1.6",
-      "typeorm": "0.2.32"
+      "typeorm": "0.2.32",
+      "uuid": "^8.3.2"
    },
    "scripts": {
       "start": "ts-node-dev src/index.ts"
